tests/ui/closures/issue-52437.stderr
error: labels cannot use keyword names
  --> $DIR/issue-52437.rs:2:13
   |
LL |     [(); &(&'static: loop { |x| {}; }) as *const _ as usize]
   |             ^^^^^^^

error[E0282]: type annotations needed
  --> $DIR/issue-52437.rs:2:30
   |
LL |     [(); &(&'static: loop { |x| {}; }) as *const _ as usize]
   |                              ^
   |
help: consider giving this closure parameter an explicit type
   |
LL |     [(); &(&'static: loop { |x: /* Type */| {}; }) as *const _ as usize]
   |                               ++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
