tests/ui/closures/issue-52437.rs
fn main() {
    [(); &(&'static: loop { |x| {}; }) as *const _ as usize]
    //~^ ERROR: labels cannot use keyword names
    //~| ERROR: type annotations needed
}
